--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "framer-motion": "^11.3.19",
-    "next": "14.2.5",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "next": "^14.2.17",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
